LocalSchema/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-e45a3846-37ae-43e3-a96f-8a4774a39847
  namespace: 46a4939c-9cb6-4f7e-b464-b2d196da7e70
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: springboot-app-e45a3846-37ae-43e3-a96f-8a4774a39847
spec:
  ingressClassName: ngrok
  rules:
    - host: picked-apt-wombat.ngrok-free.app
      http:
        paths:
          - backend:
              service:
                name: springboot-service-e45a3846-37ae-43e3-a96f-8a4774a39847
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-e45a3846-37ae-43e3-a96f-8a4774a39847
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
